Feat: update swagger file
