# routes/notes.routes.js
@@ -13,16 +13,16 @@ const {
 // Create a new Note
 router.post('/',auth.required, create);
 // Retrieve a all Notes
-router.get('/', findAll);
+router.get('/',auth.optional, findAll);
 // Retrieve a single Note with id
-router.get('/:idNote', findOne);
+router.get('/:idNote',auth.optional, findOne);
 // Delete a Note with id
 router.delete('/:idNote', auth.isAdmin, deleteOne);
 // Retrieve all Notes
-router.get('/student/:idStudent', getStudentNotes);
+router.get('/student/:idStudent',auth.optional, getStudentNotes);
 
-router.get('/student/courses/:idStudent', getStudentCourses);
+router.get('/student/courses/:idStudent',auth.optional, getStudentCourses);
 //Update the student's score
-router.put ('/student/:idStudent',auth.required, updateScore)
+router.put ('/student/:idStudent',auth.isAdmin, updateScore)
 
 module.exports = router;
